commit del dia, se avanza con visual en notification/edit, se agrega bootstrap

--- a/sigi/app/Resources/views/notification/show.html.twig
+++ b/sigi/app/Resources/views/notification/show.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Notification</h1>
+    <h1>Notificacion {{ notification.id }}</h1>
 
     <table>
         <tbody>
