--- a/sigi/app/Resources/views/notification/edit.html.twig
+++ b/sigi/app/Resources/views/notification/edit.html.twig
@@ -1,20 +1,20 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Notification edit</h1>
+    <h1>Editar Notificacion</h1>
 
     {{ form_start(edit_form) }}
         {{ form_widget(edit_form) }}
-        <input type="submit" value="Edit" />
+        <input type="submit" class="btn btn-default" value="Editar" />
     {{ form_end(edit_form) }}
 
     <ul>
         <li>
-            <a href="{{ path('notification_index') }}">Back to the list</a>
+            <a href="{{ path('notification_index') }}">Ver todas las Notifiaciones</a>
         </li>
         <li>
             {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
+                <input type="submit" class="btn btn-default" value="Eliminar">
             {{ form_end(delete_form) }}
         </li>
     </ul>
