--- a/sigi/app/Resources/views/notification/index.html.twig
+++ b/sigi/app/Resources/views/notification/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Notification list</h1>
+    <h1>Notificaciones</h1>
 
     <table>
         <thead>
