--- a/sigi/app/Resources/views/application/show.html.twig
+++ b/sigi/app/Resources/views/application/show.html.twig
@@ -1,40 +1,28 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Application</h1>
+    <h1>Applicación {{ application.id }}</h1>
 
     <table>
         <tbody>
             <tr>
-                <th>Id</th>
-                <td>{{ application.id }}</td>
-            </tr>
-            <tr>
-                <th>State</th>
+                <th>Estado: </th>
                 <td>{{ application.state }}</td>
             </tr>
             <tr>
-                <th>Applicationdate</th>
+                <th>Fecha de aplicación: </th>
                 <td>{% if application.applicationDate %}{{ application.applicationDate|date('Y-m-d') }}{% endif %}</td>
             </tr>
             <tr>
-                <th>Lastupdatedate</th>
+                <th>Ultima Actualización: &nbsp;&nbsp;</th>
                 <td>{% if application.lastUpdateDate %}{{ application.lastUpdateDate|date('Y-m-d H:i:s') }}{% endif %}</td>
             </tr>
         </tbody>
     </table>
 
-    <ul>
-        <li>
-            <a href="{{ path('application_index') }}">Back to the list</a>
-        </li>
-        <li>
-            <a href="{{ path('application_edit', { 'id': application.id }) }}">Edit</a>
-        </li>
-        <li>
+            <a href="{{ path('application_index') }}" class="btn btn-info btn1" role="button" >Listar Aplicaciones</a>
+            <a href="{{ path('application_edit', { 'id': application.id }) }}" class="btn btn-primary btn2" role="button" >Editar</a>
             {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
+                <input type="submit" value="Eliminar" class="btn btn-danger btn3" role="button">
             {{ form_end(delete_form) }}
-        </li>
-    </ul>
 {% endblock %}
