--- a/sigi/app/Resources/views/keyword/show.html.twig
+++ b/sigi/app/Resources/views/keyword/show.html.twig
@@ -1,32 +1,26 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Keyword</h1>
+    <h1>Keyword {{ keyword.id }}</h1>
 
     <table>
         <tbody>
             <tr>
-                <th>Id</th>
+                <th>Id:</th>
                 <td>{{ keyword.id }}</td>
             </tr>
             <tr>
-                <th>Keyword</th>
+                <th>Keyword:&nbsp;&nbsp;</th>
                 <td>{{ keyword.keyword }}</td>
             </tr>
         </tbody>
     </table>
 
-    <ul>
-        <li>
-            <a href="{{ path('keyword_index') }}">Back to the list</a>
-        </li>
-        <li>
-            <a href="{{ path('keyword_edit', { 'id': keyword.id }) }}">Edit</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
+
+        
+    <a href="{{ path('keyword_index') }}" class="btn btn-info btn1" role="button" >Listar Notificaciones</a>
+    <a href="{{ path('keyword_edit', { 'id': keyword.id }) }}" class="btn btn-primary btn2" role="button">Editar</a>
+    {{ form_start(delete_form) }}
+        <input type="submit" value="Eliminar" class="btn btn-danger btn2" role="button">
+    {{ form_end(delete_form) }}
 {% endblock %}
