--- a/sigi/app/Resources/views/keyword/show.html.twig
+++ b/sigi/app/Resources/views/keyword/show.html.twig
@@ -18,7 +18,7 @@
 
 
         
-    <a href="{{ path('keyword_index') }}" class="btn btn-info btn1" role="button" >Listar Notificaciones</a>
+    <a href="{{ path('keyword_index') }}" class="btn btn-info btn1" role="button" >Listar Keywords</a>
     <a href="{{ path('keyword_edit', { 'id': keyword.id }) }}" class="btn btn-primary btn2" role="button">Editar</a>
     {{ form_start(delete_form) }}
         <input type="submit" value="Eliminar" class="btn btn-danger btn2" role="button">
