--- a/sigi/app/Resources/views/requirement/new.html.twig
+++ b/sigi/app/Resources/views/requirement/new.html.twig
@@ -1,16 +1,13 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Requirement creation</h1>
+    <h1>Nuevo Requisito</h1>
 
     {{ form_start(form) }}
         {{ form_widget(form) }}
-        <input type="submit" value="Create" />
+        <input type="submit" class="btn btn-primary btn1" role="button" value="Crear" />
     {{ form_end(form) }}
 
-    <ul>
-        <li>
-            <a href="{{ path('requirement_index') }}">Back to the list</a>
-        </li>
-    </ul>
+    <a href="{{ path('requirement_index') }}" class="btn btn-info btn2" role="button">Requisitos</a>
+
 {% endblock %}
