--- a/sigi/app/Resources/views/base.html.twig
+++ b/sigi/app/Resources/views/base.html.twig
@@ -59,18 +59,45 @@
                     </li>
 
                     <li class="dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Oportunidades <span class="caret"></span></a>
                       <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">One more separated link</a></li>
+                        <li><a href="{{path('oportunityresearch_new')}}">Crear Nueva</a></li>
+                        <li><a href="{{path('oportunityresearch_index')}}">Ver Listado</a></li>
                       </ul>
                     </li>
 
+
+                    <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Departamentos <span class="caret"></span></a>
+                      <ul class="dropdown-menu">
+                        <li><a href="{{path('department_new')}}">Crear Nuevo</a></li>
+                        <li><a href="{{path('department_index')}}">Ver Listado</a></li>
+                      </ul>
+                    </li>
+
+                    <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Requisitos <span class="caret"></span></a>
+                      <ul class="dropdown-menu">
+                        <li><a href="{{path('requirement_new')}}">Crear Nuevo</a></li>
+                        <li><a href="{{path('requirement_index')}}">Ver Listado</a></li>
+                      </ul>
+                    </li>
+
+                    <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Investigación <span class="caret"></span></a>
+                      <ul class="dropdown-menu">
+                        <li><a href="{{path('research_new')}}">Crear Nueva</a></li>
+                        <li><a href="{{path('research_index')}}">Ver Listado</a></li>
+                      </ul>
+                    </li>                  
+
+                  <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Usuarios <span class="caret"></span></a>
+                      <ul class="dropdown-menu">
+                        <li><a href="{{path('user_new')}}">Crear Nuevo</a></li>
+                        <li><a href="{{path('user_index')}}">Ver Listado</a></li>
+                      </ul>
+                    </li>
 
                   </ul>
 
