--- a/sigi/app/Resources/views/department/show.html.twig
+++ b/sigi/app/Resources/views/department/show.html.twig
@@ -1,36 +1,30 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Department</h1>
+    <h1>Departamento {{ department.name }}</h1>
 
     <table>
         <tbody>
             <tr>
-                <th>Id</th>
+                <th>Id:</th>
                 <td>{{ department.id }}</td>
             </tr>
             <tr>
-                <th>Name</th>
+                <th>Nombre:</th>
                 <td>{{ department.name }}</td>
             </tr>
             <tr>
-                <th>Faculty</th>
+                <th>Facultad:&nbsp;&nbsp;</th>
                 <td>{{ department.faculty }}</td>
             </tr>
         </tbody>
     </table>
 
-    <ul>
-        <li>
-            <a href="{{ path('department_index') }}">Back to the list</a>
-        </li>
-        <li>
-            <a href="{{ path('department_edit', { 'id': department.id }) }}">Edit</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
+
+
+    <a href="{{ path('department_index') }}" class="btn btn-info btn1" role="button" >Departamentos</a>
+    <a href="{{ path('department_edit', { 'id': department.id }) }}" class="btn btn-primary btn2" role="button">Editar</a>
+    {{ form_start(delete_form) }}
+        <input type="submit" value="Eliminar" class="btn btn-danger btn2" role="button">
+    {{ form_end(delete_form) }}
 {% endblock %}
