--- a/sigi/app/Resources/views/oportunityresearch/index.html.twig
+++ b/sigi/app/Resources/views/oportunityresearch/index.html.twig
@@ -1,19 +1,20 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>OportunityResearch list</h1>
+    <h1>Lista de Oportunidades</h1>
 
-    <table>
+    <table class="table table-striped">
         <thead>
             <tr>
                 <th>Id</th>
-                <th>Creationdate</th>
-                <th>Name</th>
-                <th>Description</th>
-                <th>Public</th>
-                <th>Modality</th>
-                <th>Publish</th>
-                <th>Actions</th>
+                <th>Fecha de creación</th>
+                <th>Nombre</th>
+                <th>Descripción</th>
+                <th>Publica</th>
+                <th>Modalidad</th>
+                <th>Publicada</th>
+                <th></th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
@@ -26,24 +27,13 @@
                 <td>{{ oportunityResearch.public }}</td>
                 <td>{{ oportunityResearch.modality }}</td>
                 <td>{% if oportunityResearch.publish %}Yes{% else %}No{% endif %}</td>
-                <td>
-                    <ul>
-                        <li>
-                            <a href="{{ path('oportunityresearch_show', { 'id': oportunityResearch.id }) }}">show</a>
-                        </li>
-                        <li>
-                            <a href="{{ path('oportunityresearch_edit', { 'id': oportunityResearch.id }) }}">edit</a>
-                        </li>
-                    </ul>
-                </td>
+                <td><a href="{{ path('oportunityresearch_show', { 'id': oportunityResearch.id }) }}" class="btn btn-info btn-sm" role="button">Ver</a></td>
+                <td><a href="{{ path('oportunityresearch_edit', { 'id': oportunityResearch.id }) }}" class="btn btn-primary btn-sm" role="button">Editar</a></td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-    <ul>
-        <li>
-            <a href="{{ path('oportunityresearch_new') }}">Create a new entry</a>
-        </li>
-    </ul>
+    <a href="{{ path('oportunityresearch_new') }}" class="btn btn-primary btn-sm" role="button">Crear Nueva Oportunidad</a>
+   
 {% endblock %}
