--- a/sigi/app/Resources/views/research/index.html.twig
+++ b/sigi/app/Resources/views/research/index.html.twig
@@ -1,16 +1,17 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Research list</h1>
+    <h1>Investigaciones</h1>
 
-    <table>
+    <table class="table table-striped">
         <thead>
             <tr>
                 <th>Id</th>
-                <th>Code</th>
-                <th>Section</th>
-                <th>Creationdate</th>
-                <th>Actions</th>
+                <th>Sigla</th>
+                <th>Sección</th>
+                <th>Fecha de creación</th>
+                <th></th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
@@ -20,24 +21,12 @@
                 <td>{{ research.code }}</td>
                 <td>{{ research.section }}</td>
                 <td>{% if research.creationDate %}{{ research.creationDate|date('Y-m-d') }}{% endif %}</td>
-                <td>
-                    <ul>
-                        <li>
-                            <a href="{{ path('research_show', { 'id': research.id }) }}">show</a>
-                        </li>
-                        <li>
-                            <a href="{{ path('research_edit', { 'id': research.id }) }}">edit</a>
-                        </li>
-                    </ul>
-                </td>
+                <td><a href="{{ path('research_show', { 'id': research.id }) }}" class="btn btn-info btn-sm" role="button">Ver</a></td>
+                <td><a href="{{ path('research_edit', { 'id': research.id }) }}" class="btn btn-primary btn-sm" role="button">Editar</a></td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
-
-    <ul>
-        <li>
-            <a href="{{ path('research_new') }}">Create a new entry</a>
-        </li>
-    </ul>
+    <a href="{{ path('research_new') }}" class="btn btn-primary btn-sm" role="button">Crear Nueva Investigación</a>
+   
 {% endblock %}
