--- a/sigi/app/Resources/views/research/show.html.twig
+++ b/sigi/app/Resources/views/research/show.html.twig
@@ -1,40 +1,33 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Research</h1>
+    <h1>Investigación</h1>
 
     <table>
         <tbody>
             <tr>
-                <th>Id</th>
+                <th>Id:</th>
                 <td>{{ research.id }}</td>
             </tr>
             <tr>
-                <th>Code</th>
+                <th>Sigla:</th>
                 <td>{{ research.code }}</td>
             </tr>
             <tr>
-                <th>Section</th>
+                <th>Sección:</th>
                 <td>{{ research.section }}</td>
             </tr>
             <tr>
-                <th>Creationdate</th>
+                <th>Fecha de Creación:&nbsp;&nbsp;</th>
                 <td>{% if research.creationDate %}{{ research.creationDate|date('Y-m-d') }}{% endif %}</td>
             </tr>
         </tbody>
     </table>
 
-    <ul>
-        <li>
-            <a href="{{ path('research_index') }}">Back to the list</a>
-        </li>
-        <li>
-            <a href="{{ path('research_edit', { 'id': research.id }) }}">Edit</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
+    <a href="{{ path('research_index') }}" class="btn btn-info btn1" role="button" >Investigaciones</a>
+    <a href="{{ path('research_edit', { 'id': research.id }) }}" class="btn btn-primary btn2" role="button">Editar</a>
+    {{ form_start(delete_form) }}
+        <input type="submit" value="Eliminar" class="btn btn-danger btn2" role="button">
+    {{ form_end(delete_form) }}
+
 {% endblock %}
