--- a/sigi/app/Resources/views/user/show.html.twig
+++ b/sigi/app/Resources/views/user/show.html.twig
@@ -1,68 +1,61 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>User</h1>
+    <h1>Usuario</h1>
 
     <table>
         <tbody>
             <tr>
-                <th>Id</th>
+                <th>Id:</th>
                 <td>{{ user.id }}</td>
             </tr>
             <tr>
-                <th>Usertype</th>
+                <th>Tipo de Usuario:</th>
                 <td>{{ user.userType }}</td>
             </tr>
             <tr>
-                <th>Username</th>
+                <th>Nombre de Usuario: &nbsp;&nbsp;</th>
                 <td>{{ user.userName }}</td>
             </tr>
             <tr>
-                <th>Rut</th>
+                <th>Rut:</th>
                 <td>{{ user.rut }}</td>
             </tr>
             <tr>
-                <th>Name</th>
+                <th>Nombre:</th>
                 <td>{{ user.name }}</td>
             </tr>
             <tr>
-                <th>Lastname</th>
-                <td>{{ user.lastName }}</td>
-            </tr>
-            <tr>
-                <th>Middlename</th>
+                <th>Segundo Nombre:</th>
                 <td>{{ user.middleName }}</td>
             </tr>
             <tr>
-                <th>Secondsurname</th>
+                <th>Apellido Paterno:</th>
+                <td>{{ user.lastName }}</td>
+            </tr>
+            <tr>
+                <th>Apellido Materno:</th>
                 <td>{{ user.secondSurname }}</td>
             </tr>
             <tr>
-                <th>Email</th>
+                <th>Email:</th>
                 <td>{{ user.email }}</td>
             </tr>
             <tr>
-                <th>Phone</th>
+                <th>Telefono:</th>
                 <td>{{ user.phone }}</td>
             </tr>
             <tr>
-                <th>Picture</th>
+                <th>Path a la foto:</th>
                 <td>{{ user.picture }}</td>
             </tr>
         </tbody>
     </table>
 
-    <ul>
-        <li>
-            <a href="{{ path('user_index') }}">Back to the list</a>
-        </li>
-        <li>
-            <a href="{{ path('user_edit', { 'id': user.id }) }}">Edit</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
+    <a href="{{ path('user_index') }}" class="btn btn-info btn1" role="button" >Usuarios</a>
+    <a href="{{ path('user_edit', { 'id': user.id }) }}" class="btn btn-primary btn2" role="button">Editar</a>
+    {{ form_start(delete_form) }}
+        <input type="submit" value="Eliminar" class="btn btn-danger btn2" role="button">
+    {{ form_end(delete_form) }}
+
 {% endblock %}
