--- a/sigi/app/Resources/views/base.html.twig
+++ b/sigi/app/Resources/views/base.html.twig
@@ -116,7 +116,8 @@
                         <li><a href="#">Perfil</a></li>
                         <li><a href="#">Oportunidades</a></li>
                         <li role="separator" class="divider"></li>
-                        <li><a href="#">Cerrar Sesión</a></li>
+                        <li><a href="{{path('logout')}}">Cerrar Sesión</a></li>
+                        <li><a href="{{ logout_path('secured_area') }}">Logout</a></li>
                       </ul>
                     </li>
                   </ul>
