--- a/sigi/app/Resources/views/user/index.html.twig
+++ b/sigi/app/Resources/views/user/index.html.twig
@@ -25,7 +25,7 @@
             <tr>
                 <td><a href="{{ path('user_show', { 'id': user.id }) }}">{{ user.id }}</a></td>
                 <td>{{ user.userType }}</td>
-                <td>{{ user.userName }}</td>
+                <td>{{ user.username }}</td>
                 <td>{{ user.rut }}</td>
                 <td>{{ user.name }}</td>
                 <td>{{ user.lastName }}</td>
