--- a/sigi/app/Resources/views/user/show.html.twig
+++ b/sigi/app/Resources/views/user/show.html.twig
@@ -15,7 +15,7 @@
             </tr>
             <tr>
                 <th>Nombre de Usuario: &nbsp;&nbsp;</th>
-                <td>{{ user.userName }}</td>
+                <td>{{ user.username }}</td>
             </tr>
             <tr>
                 <th>Rut:</th>
