--- a/sigi/app/Resources/views/security/login.html.twig
+++ b/sigi/app/Resources/views/security/login.html.twig
@@ -17,10 +17,10 @@
         <input class="form-control" type="password" id="password" name="_password" />
 
         {#
-            If you want to control the URL the user
-            is redirected to on success (more details below)
-            <input type="hidden" name="_target_path" value="/account" />
+        If you want to control the URL the user
+        is redirected to on success (more details below)
         #}
+        <input type="hidden" name="/" value="/account" />
 
         </br>
         </br>
