--- a/sigi/app/Resources/views/base.html.twig
+++ b/sigi/app/Resources/views/base.html.twig
@@ -129,9 +129,9 @@
                     </form>
                     {% if is_granted(['IS_AUTHENTICATED_FULLY', 'IS_AUTHENTICATED_REMEMBERED']) %}
                       <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Usuario <span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ app.user.name }} {{ app.user.lastname }} <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                          <li><a href="#">Perfil</a></li>
+                          <li><a href="{{ path('user_show', { 'id': app.user.id }) }}">Perfil</a></li>
                           <li><a href="#">Oportunidades</a></li>
                           <li role="separator" class="divider"></li>
                           <li><a href="{{path('logout')}}">Cerrar Sesión</a></li>
