--- a/sigi/app/Resources/views/user/show.html.twig
+++ b/sigi/app/Resources/views/user/show.html.twig
@@ -52,10 +52,14 @@
         </tbody>
     </table>
 
-    <a href="{{ path('user_index') }}" class="btn btn-info btn1" role="button" >Usuarios</a>
+    {% if is_granted('ROLE_ADMIN') %}
+        <a href="{{ path('user_index') }}" class="btn btn-info btn1" role="button" >Usuarios</a>
+    {% endif %}
     <a href="{{ path('user_edit', { 'id': user.id }) }}" class="btn btn-primary btn2" role="button">Editar</a>
-    {{ form_start(delete_form) }}
-        <input type="submit" value="Eliminar" class="btn btn-danger btn2" role="button">
-    {{ form_end(delete_form) }}
+    {% if is_granted('ROLE_ADMIN') %}
+        {{ form_start(delete_form) }}
+            <input type="submit" value="Eliminar" class="btn btn-danger btn2" role="button">
+        {{ form_end(delete_form) }}
+    {% endif %}
 
 {% endblock %}
