--- a/sigi/app/Resources/views/user/show.html.twig
+++ b/sigi/app/Resources/views/user/show.html.twig
@@ -11,7 +11,7 @@
             </tr>
             <tr>
                 <th>Tipo de Usuario:</th>
-                <td>{{ user.userType }}</td>
+                <td>{{ user.role }}</td>
             </tr>
             <tr>
                 <th>Nombre de Usuario: &nbsp;&nbsp;</th>
