update de usuario sin cambiar clave

--- a/sigi/app/Resources/views/user/show.html.twig
+++ b/sigi/app/Resources/views/user/show.html.twig
@@ -10,8 +10,12 @@
                 <td>{{ user.id }}</td>
             </tr>
             <tr>
+                <th>Contraseña:</th>
+                <td>{{ user.plainPassword}}</td>
+            </tr>
+            <tr>
                 <th>Tipo de Usuario:</th>
-                <td>{{ user.role }}</td>
+                <td>{{ user.role}}</td>
             </tr>
             <tr>
                 <th>Nombre de Usuario: &nbsp;&nbsp;</th>
